530 ==> 378006 - Preview of the time adjust result.
531 ==> 398624 - Cannot edit Date in XMP video metadata.
532 ==> 398810 - "Dates" panel is not refreshed after a photo with a new year is added.
533 ==> 398986 - Deleting a tag while using it as filter removes all images from the current view.
534 ==> 370093 - Opening a picture (double-click) in Showfoto (default viewer) does not show the other pictures in the folder (similar to Bug 221245).
535 ==> 398479 - DigiKam crashing at startup Thread 2 Crashed:: Digikam::ScanController.
536 ==> 397808 - Digikam Mac Package crashes after resume when screen configuration changes.
537 ==> 399071 - "Adjust Time Date" tool shows all times as "00:00:00".
538 ==> 399134 - Progress bar or status when importing from camera/card reader.
539 ==> 399153 - Selecting a picture with a tag and another without that tag, the checkbox is black instead of gray. 
540 ==> 384759 - Can't adjust timestamp of RAW files.
541 ==> 399221 - Cannot scroll in videos by clicking on the progress bar (only by moving the progress slider).
542 ==> 399315 - Horizontal scroll bar aligned to the right by default.
543 ==> 397962 - Digikam 6.0 does not start after install.
544 ==> 399336 - Google maps – "For development purposes only" printed on the map.
545 ==> 399338 - Count of items in Tree Views does not match total number of items.
546 ==> 399292 - Video file datetime not shown correctly after editing.
547 ==> 370553 - Adjust date - not possible to update "digikam timestamp".
548 ==> 329091 - MySQL : needs to set "max-allowed-packet" server settings from 4.096 to 16.777.216 to prevent Maintenance tool crash.
549 ==> 399406 - Digikam Crash on advance rename.
550 ==> 397386 - Add a separate checkbox to "Show Rating".
551 ==> 335870 - Nexus 4 in PTP mode gets error: The specified camera ("/org/kde/solid/udev/...") is not supported.
552 ==> 399917 - Fails to build with QT5.7.1
553 ==> 399762 - Digikam Geolocation Correlator ignores time offset.
554 ==> 