@@ -617,4 +617,5 @@ BUGFIXES:
 551 ==> 335870 - Nexus 4 in PTP mode gets error: The specified camera ("/org/kde/solid/udev/...") is not supported.
 552 ==> 399917 - Fails to build with QT5.7.1
 553 ==> 399762 - Digikam Geolocation Correlator ignores time offset.
-554 ==> 
+554 ==> 400148 - Files exported in google photos does not have their filename as name, but their date.
+555 ==> 
